--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "index.js",
   "author": "Numeric",
   "license": "MIT",
+  "scripts":{
+  "dev": "nodemoon index.js",
+  "start": "node index.js"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parse": "^0.1.0",
