--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "author": "Numeric",
   "license": "MIT",
-  "scripts":{
-  "dev": "nodemoon index.js",
-  "start": "node index.js"
+  "scripts": {
+    "dev": "nodemoon index.js",
+    "start": "node index.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "busca-cep": "^0.5.0",
     "cors": "^2.8.5",
+    "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
