--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "author": "Numeric",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemoon index.js",
+    "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.905.0",
     "bcrypt": "^5.0.1",
     "body-parse": "^0.1.0",
     "body-parser": "^1.19.0",
@@ -19,7 +20,10 @@
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
-    "mongoose": "^5.12.5"
+    "mongoose": "^5.12.5",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
