--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "mongoose": "^5.12.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "multer-s3": "^2.9.0"
+    "multer-s3": "^2.9.0",
+    "nodemailer": "^6.6.0",
+    "nodemailer-smtp-transport": "^2.7.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
